--- a/styles.css
+++ b/styles.css
@@ -235,3 +235,69 @@ header {
     border: 4px solid #f05116;
     border-radius: 15px;
 }
+
+/* MEDIA QUERIES */
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        height: auto;
+        padding: 0.5rem;
+    }
+
+    .nav-ul {
+        flex-direction: column;
+        margin: 0;
+    }
+
+    .nav-ul-li {
+        padding: 0.5rem;
+        font-size: 16px;
+    }
+
+    header {
+        flex-direction: column;
+    }
+
+    .section-container-services {
+        flex-direction: column;
+    }
+
+    .section-container-services-ul {
+        margin: 20px;
+        padding: 15px;
+    }
+
+    .form-container-input {
+        width: 200px;
+    }
+
+    .section-form {
+        max-width: 400px;
+        width: 95%;
+        padding: 30px 20px;
+    }
+
+    .form-button {
+        width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+    .nav-ul-li {
+        font-size: 14px;
+    }
+
+    .section-aboutUs-p {
+        padding: 15px;
+    }
+
+    .form-button {
+        font-size: 14px;
+    }
+
+    .section-form {
+        padding: 20px 15px;
+        width: 90%;
+        max-width: 300px;
+    }
+}
