--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 19px;
+    font-size: 22px;
     height: 100%;
     padding: 0 1rem;
     cursor: pointer;
@@ -73,6 +73,7 @@ header {
 
 .header-container-title {
     margin: 25vh 5vw;
+    font-size: 28px;
 }
 
 .header-container-logo {
@@ -90,7 +91,6 @@ header {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    min-height: 550px;
 }
 
 
@@ -107,6 +107,8 @@ header {
     margin: 70px;
     padding: 20px;
     border: 4px solid #f05116;
+    min-height: 300px;
+    max-width: 500px;
     border-radius: 10px;
 }
 
@@ -122,7 +124,7 @@ header {
 
 .services-ul-li {
     margin: 20px 0;
-    font-size: 18px;
+    font-size: 24px;
 }
 
 .section-aboutUs {
@@ -131,14 +133,20 @@ header {
     justify-content: center;
     flex-direction: column;
     min-height: 500px;
+    font-size: 24px;
+}
+
+.section-aboutUs-div{
+    border: 4px solid #f05116;
+    border-radius: 10px;
+    margin: 24px;
 }
 
 .section-aboutUs-p {
-    padding: 40px;
-    margin:24px ;
-    border: 4px solid #f05116;
-    border-radius: 10px;
-    max-width: 800px;
+    padding: 10px 20px;
+    margin: 15px;
+    max-width: 900px;
+    font-size: 27px;
 }
 
 #Contactanos {
@@ -271,7 +279,8 @@ header {
     }
 
     .header-container-title {
-        margin: 185px 38px 20px 38px
+        margin: 110px 38px 20px 38px;
+        font-size: 17px;
     }
 
     .logo-transparent {
@@ -286,6 +295,14 @@ header {
     .section-container-services-ul {
         margin: 20px;
         padding: 15px;
+    }
+
+    .services-ul-li{
+        font-size: 17px;
+    }
+
+    .section-aboutUs-p{
+        font-size: 17px;
     }
 
     .form-container-input {
