--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 body {
     background-color: #24282a;
     color: #cccccc;
@@ -39,13 +38,14 @@ body {
 .nav-link{
     text-decoration: none;
     color: #cccccc;
+    padding: 10px;
 }
 
 .nav-ul-li {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 22px;
+    font-size: 23px;
     height: 100%;
     padding: 0 1rem;
     cursor: pointer;
@@ -54,6 +54,32 @@ body {
 
 .nav-link:visited {
     color: #cccccc;
+}
+
+.langue-li {
+    position: relative;
+    display: inline-block;
+    font-size: 23px;
+    height: 100%;
+    padding: 0 1rem;
+    cursor: pointer;
+}
+
+.nav-ul-langue-li{
+    position: relative;
+    display: inline-block;
+    font-size: 20px;
+    padding: 8px 0px;
+}
+
+.nav-ul-langue{
+    display: none;
+    position: absolute;
+}
+
+.langue-li:hover .nav-ul-langue {
+    display: block;
+    background-color: #2b2d2e;
 }
 
 main {
@@ -227,6 +253,7 @@ header {
 }
 
 .footer-container {
+    font-size: 22px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
